tests/sksl/errors/ArrayTooManyDimensions.dsl.glsl
### Compilation failed:

error: multi-dimensional arrays are not supported
error: expected a type, but found '2'
2 errors
